--- a/src/about.html
+++ b/src/about.html
@@ -7,56 +7,59 @@
         <meta name="description" content="">
         <meta name="author" content=""> 
         <title>Static Blog</title>
-        <!-- Bootstrap Core CSS -->
-        <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-        <!-- CSS -->
+        <link href="../bootstrap/bootstrap-social.css" rel="stylesheet" media="screen">
+        <link href="../bootstrap/css/font-awesome.css" rel="stylesheet" media="screen">
         <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Risque" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed" rel="stylesheet">
-        <link href="css/static-blog-reset.css" rel="stylesheet">        
-        <link href="css/static-blog.css" rel="stylesheet">
+        <link href="../css/static-blog-reset.css" rel="stylesheet">        
+        <link href="../css/static-blog.css" rel="stylesheet">
     </head>
     <body>
-        <nav class="navbar-custom">
+        <nav>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-4 col-lg-offset-8">         
                         <ul class="nav nav-pills nav-justified">
-                            <li role="presentation"><a href="index.html">HOME</a></li>
-                            <li role="presentation"><a href="about.html">ABOUT</a></li>
+                            <li role="presentation"><a href="../src/index.html">HOME</a></li>
+                            <li role="presentation"><a href="../src/about.html">ABOUT</a></li>
                             <li role="presentation" class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">CATS <span class="caret"></span>
                                 <ul class="dropdown-menu">
-                                    <li><a href="new-kitten.html">New Kitten</a></li>
+                                    <li><a href="../src/new-kitten.html">New Kitten</a></li>
                                     <li><a href="#">Adult Cat</a></li>
                                     <li><a href="#">Senior Cat</a></li>
                                 </ul>
                             </li>
-                            <li role="presentation"><a href="contact.html">CONTACT</a></li>
+                            <li role="presentation"><a href="../src/contact.html">CONTACT</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </nav>
-        <header class="intro-header" style="background-image: url('img/new-kitten.jpg')">
+        <header class="intro-header" style="background-image: url('../img/about.jpg')">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>New Kitten</h1>
+                        <h1>About Me</h1>
                         <hr>
-                        <span>All you need to know about kittens</span>
+                        <span>Something about me and my life</span>
                     </div>
                 </div>
             </div>
         </header>
-        <article>
+        <article id="startchange">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10 col-lg-offset-1">
-
+                    <strong><h1>Only the Best for Your Pet</h1><br></strong>
+                    <p>At Vetstreet Inc., we've spent more than 30 years helping veterinarians care for animals and communicate with pet owners. In 2011, we took that commitment one step further when we launched vetstreet.com, which celebrates the joy that animals bring to our lives while educating pet owners about the best ways to keep their pets healthy and happy.</p>
+                    <p>We deliver advice from veterinarians, trainers and pet experts who are dedicated to giving you the most trusted, authoritative information available. With new content posted daily, you'll find the most current advice on dealing with everything from cat and dog training to serious health conditions and can feel confident knowing that all medical content goes through additional review by veterinarians.</p>
+                    <p>Vetstreet.com also covers fun events (from dog shows to pet parades), tracks trends (including must-see viral videos), reviews great products (such as engaging cat toys and cushy dog beds), follows animal news (particularly conservation info) and explores all the things that make being a pet owner so amazing. And if you are looking for your first cat or dog — or simply trying to better understand the one you have — our extensive breed profiles allow you to research characteristics, history, personality, health and grooming information for 45 cat breeds and 220 dog breeds and mixes. There are also features explaining the challenges and rewards of owning exotic pets.</p>
+                    <p>We know the key to a healthy animal is a well-informed owner and an expert veterinary care team. That's why we provide the information and tools pet owners need to make that partnership as successful as possible such as our Find a Vet service, which connects you with leading veterinarians in your area.</p>
+                    <p>Vetstreet.com's goal is to help you help your pet live a long, happy and healthy life.  </p>
                     </div>
                 </div>
             </div>
@@ -92,13 +95,31 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <hr>
-                        <p>All articles are coming from <a href="http://www.vetstreet.com">VetStreet</a></p>
-                        <p>Photo credit: <a href="https://www.flickr.com/photos/schwarzbrot/15636456045/">Robert Anders</a> via <a href="http://foter.com/">Foter.com</a> / <a href="http://creativecommons.org/licenses/by/2.0/">CC BY</a></p>
+                        <p>Article is coming from <a href="http://www.vetstreet.com/about">VetStreet</a></p>
+                        <p>Photo credit: <a href="https://www.flickr.com/photos/kpaulus/4742740799/">Kristine Paulus</a> via <a href="http://foter.com/">Foter.com</a> / <a href="http://creativecommons.org/licenses/by/2.0/">CC BY</a></p>
                     </div>
                 </div>     
             </div>
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script>
+            $(document).ready(function(){       
+                var scroll_start = 0;
+                var startchange = $('#startchange');
+                var offset = startchange.offset();
+                $(document).scroll(function() {
+                    scroll_start = $(this).scrollTop();
+                    if(scroll_start > offset.top) {
+                        $('.nav-justified').addClass("after");
+                        $("nav").addClass("after");
+                    } else {
+                        $("nav").removeClass("after");
+                        $('.nav-justified').removeClass("after");
+                        $('.nav-justified').addClass("before");
+                    }
+                });
+            });
+        </script>
     </body>
 </html>    
