--- a/src/index.html
+++ b/src/index.html
@@ -119,15 +119,15 @@
                     <div class="col-lg-10 col-lg-offset-1">
                         <div class="col-lg-4">
                            <p><a href="../src/new-kitten.html">NEW KITTEN</a></p><br>
-                           <a href="../src/new-kitten.html" title="New Kitten"><img src="../img/kitten.jpg" alt="New Kitten" class="home"/></a>
+                           <center><a href="../src/new-kitten.html" title="New Kitten"><img src="../img/kitten.jpg" alt="New Kitten" class="home"/></a></center>
                         </div>
                         <div class="col-lg-4">
                             <p><a href="#">ADULT CAT</a></p><br>
-                            <a href="#" title="Adult Cat"><img src="../img/a-cat.jpg" alt="Adult Cat" class="home"/></a> 
+                            <center><a href="#" title="Adult Cat"><img src="../img/a-cat.jpg" alt="Adult Cat" class="home"/></a></center> 
                         </div>
                         <div class="col-lg-4">
                             <p><a href="#">SENIOR CAT</a></p><br>
-                            <a href="#" title="Senior Cat"><img src="../img/s-cat.jpg" alt="Senior Cat" class="home"/></a>  
+                            <center><a href="#" title="Senior Cat"><img src="../img/s-cat.jpg" alt="Senior Cat" class="home"/></a></center>  
                         </div>
                     </div>
                 </div>
@@ -175,23 +175,6 @@
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <script>
-            $(document).ready(function(){       
-                var scroll_start = 0;
-                var startchange = $('#startchange');
-                var offset = startchange.offset();
-                $(document).scroll(function() {
-                    scroll_start = $(this).scrollTop();
-                    if(scroll_start > offset.top) {
-                        $('.nav-justified').addClass("after");
-                        $("nav").addClass("after");
-                    } else {
-                        $("nav").removeClass("after");
-                        $('.nav-justified').removeClass("after");
-                        $('.nav-justified').addClass("before");
-                    }
-                });
-            });
-        </script>
+        <script src="../js/static-blog.js"></script>  
     </body>
 </html>    
