--- a/src/contact.html
+++ b/src/contact.html
@@ -61,6 +61,9 @@
                 <div class="row control-group">
                     <div class="col-lg-10 col-lg-offset-1">
                         <form class="form-horizontal" role="form" novalidate>
+                            <div class="form-group" role="alert">
+                                <span id="hollow"></span>
+                            </div>
                             <div class="form-group">
                                 <label for="username" class="col-sm-2 control-label">Name</label>
                                 <div class="col-sm-10">
@@ -87,7 +90,7 @@
                             </div>
                             <input type="reset" class="btn btn-default pull-left" id="reset" value="Clear form"><br>
                             <hr>
-                            <center><button type="submit" class="btn btn-default btn-lg">SEND</button></center>
+                            <center><input type="submit" class="btn btn-default btn-lg" value="SEND"></center>
                             </form>
                         </div>
                     </div>   
