Updated README description.

--- a/src/contact.html
+++ b/src/contact.html
@@ -88,7 +88,7 @@
                                     <textarea name="message" id="inputMessage" class="form-control" rows="5" cols="50" placeholder="Massage..." required value=""></textarea>
                                 </div>
                             </div>
-                            <input type="reset" class="btn btn-default pull-left" id="reset" value="Clear form"><br>
+                            <input type="reset" class="btn btn-default pull-right" id="reset" value="Clear form"><br>
                             <hr>
                             <center><input type="submit" class="btn btn-default btn-lg" value="SEND"></center>
                             </form>
