--- a/src/about.html
+++ b/src/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -13,15 +13,14 @@
         <link href="../bootstrap/css/font-awesome.css" rel="stylesheet" media="screen">
         <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Risque" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed" rel="stylesheet">
-        <link href="../css/static-blog-reset.css" rel="stylesheet">        
+        <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed" rel="stylesheet">        
         <link href="../css/static-blog.css" rel="stylesheet">
     </head>
     <body>
         <nav>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-4 col-lg-offset-8">         
+                    <div class="col-lg-4 col-lg-offset-8 col-md-4 col-md-offset-7 hidden-sm hidden-xs">         
                         <ul class="nav nav-pills nav-justified">
                             <li role="presentation"><a href="../src/index.html">HOME</a></li>
                             <li role="presentation"><a href="../src/about.html">ABOUT</a></li>
@@ -42,7 +41,7 @@
         <header class="intro-header" style="background-image: url('../img/about.jpg')">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <h1>About Me</h1>
                         <hr>
                         <span>Something about me and my life</span>
@@ -53,7 +52,7 @@
         <article id="startchange">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-10 col-lg-offset-1">
+                    <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
                     <strong><h1>Only the Best for Your Pet</h1><br></strong>
                     <p>At Vetstreet Inc., we've spent more than 30 years helping veterinarians care for animals and communicate with pet owners. In 2011, we took that commitment one step further when we launched vetstreet.com, which celebrates the joy that animals bring to our lives while educating pet owners about the best ways to keep their pets healthy and happy.</p>
                     <p>We deliver advice from veterinarians, trainers and pet experts who are dedicated to giving you the most trusted, authoritative information available. With new content posted daily, you'll find the most current advice on dealing with everything from cat and dog training to serious health conditions and can feel confident knowing that all medical content goes through additional review by veterinarians.</p>
@@ -67,7 +66,7 @@
         <footer>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2" id="footer">
+                    <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-xs-12" id="footer">
                         <hr>
                         <ul class="list-inline text-center">
                             <li><a href="#">
@@ -93,7 +92,7 @@
                     </div>
                 </div>    
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <hr>
                         <p>Article is coming from <a href="http://www.vetstreet.com/about">VetStreet</a></p>
                         <p>Photo credit: <a href="https://www.flickr.com/photos/kpaulus/4742740799/">Kristine Paulus</a> via <a href="http://foter.com/">Foter.com</a> / <a href="http://creativecommons.org/licenses/by/2.0/">CC BY</a></p>
