--- a/src/contact.html
+++ b/src/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -14,14 +14,13 @@
         <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Risque" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed" rel="stylesheet">
-        <link href="../css/static-blog-reset.css" rel="stylesheet">        
         <link href="../css/static-blog.css" rel="stylesheet">
     </head>
     <body>
         <nav>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-4 col-lg-offset-8">         
+                    <div class="col-lg-4 col-lg-offset-8 col-md-4 col-md-offset-7 hidden-sm hidden-xs">         
                         <ul class="nav nav-pills nav-justified">
                             <li role="presentation"><a href="../src/index.html">HOME</a></li>
                             <li role="presentation"><a href="../src/about.html">ABOUT</a></li>
@@ -42,7 +41,7 @@
         <header class="intro-header" style="background-image: url('../img/contact.jpg')">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <h1>Contact</h1>
                         <hr>
                         <span>Write to me if you have any question</span>
@@ -53,13 +52,13 @@
         <article id="startchange">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-10 col-lg-offset-1">
+                    <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
                         <h1>Want to ask me a question? Fill out the form below to send me a message and I will get back to you as soon as I can.</h1>
                         <hr>
                     </div>
                 </div>
                 <div class="row control-group">
-                    <div class="col-lg-10 col-lg-offset-1">
+                    <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
                         <form class="form-horizontal" role="form" novalidate>
                             <div class="form-group" role="alert">
                                 <span id="hollow"></span>
@@ -79,7 +78,7 @@
                             <div class="form-group">
                                 <label for="phonenumber" class="col-sm-2 control-label">Phone Number</label>
                                 <div class="col-sm-10">
-                                    <input type="tel" class="form-control" id="phonenumber" placeholder="Phone number e.g 123-123-123" required value="" pattern="^[0-9]{3}-[0-9]{3}-[0-9]{3}$" />
+                                    <input type="tel" class="form-control" id="phonenumber" placeholder="Phone number e.g 123-123-123" required value="" pattern="^[0-9]{3}-[0-9]{3}-[0-9]{3}$">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -100,7 +99,7 @@
         <footer>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2" id="footer">
+                    <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-xs-12" id="footer">
                         <hr>
                         <ul class="list-inline text-center">
                             <li><a href="#">
@@ -126,7 +125,7 @@
                     </div>
                 </div>        
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <hr>
                         <p>Photo credit: <a href="https://www.flickr.com/photos/timove/3291631542/">TimOve</a> via <a href="http://foter.com/">Foter.com</a> / <a href="http://creativecommons.org/licenses/by/2.0/">CC BY</a></p>
                     </div>
