--- a/src/about.html
+++ b/src/about.html
@@ -20,20 +20,28 @@
         <nav>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-4 col-lg-offset-8 col-md-4 col-md-offset-7 hidden-sm hidden-xs">         
+                    <div class="col-lg-4 col-lg-offset-8 col-md-4 col-md-offset-7 col-sm-12 col-xs-12 page-nav">         
                         <ul class="nav nav-pills nav-justified">
-                            <li role="presentation"><a href="../src/index.html">HOME</a></li>
-                            <li role="presentation"><a href="../src/about.html">ABOUT</a></li>
+                            <li role="presentation"><a href="../src/index.html" title="Home page">HOME</a></li>
+                            <li role="presentation"><a href="../src/about.html" title="A few words about us">ABOUT</a></li>
                             <li role="presentation" class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">CATS <span class="caret"></span>
                                 <ul class="dropdown-menu">
-                                    <li><a href="../src/new-kitten.html">New Kitten</a></li>
-                                    <li><a href="#">Adult Cat</a></li>
-                                    <li><a href="#">Senior Cat</a></li>
+                                    <li><a href="../src/new-kitten.html"title="About little kitten">New Kitten</a></li>
+                                    <li><a href="#" title="About adult cat">Adult Cat</a></li>
+                                    <li><a href="#" title="About senior cat">Senior Cat</a></li>
                                 </ul>
                             </li>
                             <li role="presentation"><a href="../src/contact.html">CONTACT</a></li>
                         </ul>
+                        <button type="button" title="Open menu" class="hamburger">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="35" height="12" viewBox="0 0 35 12" class="hamburger-icon">
+                                <path d="M-0.000,12.000 L-0.000,8.000 L35.000,8.000 L35.000,12.000 L-0.000,12.000 ZM-0.000,0.000 L35.000,0.000 L35.000,4.000 L-0.000,4.000 L-0.000,0.000 Z"/>
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="28.312" height="27.594" viewBox="0 0 28.312 27.594" class="close-icon">
+                                <path d="M28.298,2.8331 L16.984,14.145 L27.591,24.751 L24.763,27.580 L14.156,16.973 L3.549,27.580 L0.721,24.751 L11.328,14.145 L0.014,2.831 L2.842,0.003 L14.156,11.316 L25.470,0.003 L28.298,2.831 Z"/>
+                            </svg>
+                        </button>
                     </div>
                 </div>
             </div>
